--- a/_includes/home-sample.html
+++ b/_includes/home-sample.html
@@ -122,7 +122,7 @@
         <div class="col-lg-4">
             <div class="card card-background" style="background-image: url('./assets/img/projects/qa.jpeg')">
                 <div class="card-body text-center">
-                    <h2 class="card-title">ਜੰਗੀ ਹਥਿਆਰ <br/>Old Weapons</h2>
+                    <h2 class="card-title">ਜੰਗੀ ਹਥਿਆਰ <br/>Battlefield Artifacts</h2>
                     <p class="text-white">Visitors can view old weapons used by Sikhs in battles, including swords, shields, and other traditional weapons.</p>
                 </div>
             </div>
