--- a/_includes/home-sample.html
+++ b/_includes/home-sample.html
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="text-center display-3 text-white">ਜ਼ਫ਼ਰਨਾਮਾ - The Zafarnāma - ظفرنامہ, (Declaration of Victory) letter sent by Guru Gobind Singh Ji in 1705 to the Mughal Emperor Aurangzeb.</h1>
+        <h1 class="text-center display-3 text-white">Message of the month - ਜ਼ਫ਼ਰਨਾਮਾ - The Zafarnāma - ظفرنامہ, (Declaration of Victory) letter sent by Guru Gobind Singh Ji in 1705 to the Mughal Emperor Aurangzeb.</h1>
       </div>
     </div>
   </div>
@@ -151,9 +151,15 @@
             </div>
         </div>
     </div>
-  </div>
+          <div class="col-lg-4">
+          <div class="card card-background" style="background-image: url('./assets/img/projects/sikh-library.jpeg')">
+            <div class="card-body text-center">
+                <h2 class="card-title">ਦਰਬਾਰ-ਏ-ਖ਼ਾਲਸਾ <br />Theatre</h2>
+                <p class="text-white">Here visitors shall be inspired by social/religious aspects of the very rich heritage delivered in the form of lectures/speeches along with audio/video productions. 
+                  </div>
+            </div>
+    </div>
 </div>
-
 <div class="fullWidth">
   <div class="container pt-5 pb-5">
     <div class="row">
